--- a/images/rings.html
+++ b/images/rings.html
@@ -1,14 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HIMI's-RINGS</title>
-</head>
-<body>
-  <section id="showcase">
-
-  </section>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/images/style3.css">
+    <title>HIMI's-RINGS</title>
+  </head>
+  <header>
+    <nav class="navbar navbar-light bg-danger">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="./logo.png"
+            alt=""
+            width="100px"
+            height="100px"
+            class="d-inline-block align-text-top rounded-circle"
+          />
+        </a>
+      </div>
+    </nav>
+  </header>
+  <body>
+    <section id="showcase" >
+      <div class="row d-flex justify-content-center text-center my-2">
+        <h1><i>Our collection</i></h1>
+        <h3 class="my-2">
+          An exceptional array of contemporary & traditional masterpieces whose
+          beauty is enhanced by our unparalleled craftsmanship.
+        </h3>
+      </div>
+      <div class="backs container">
+        <div class="row">
+          <div class="col-sm-8 px-0">
+            <div class="bags">
+              <img
+                src="/images/colr/pexels-vaibhav-nagare-5974504.jpg"
+                width="100%"
+                height="400px"
+                alt=""
+              />
+              <!-- <div class="title_bag">
+                GOLD
+              </div> -->
+            </div>
+          </div>
+          <div class="col-sm-4 px-0">
+            <div class="bags">
+              <img
+                src="/images/colr/pexels-dreamlens-production-5837666.jpg"
+                width="100%"
+                height="400px"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 px-0">
+            <div class="bags">
+              <img
+                src="/images/colr/pexels-lucas-mendes-4939296.jpg"
+                width="100%"
+                height="400px"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-sm-4 px-0">
+            <div class="bags">
+              <img
+                src="./colr/pexels-marta-branco-1395306.jpg"
+                width="100%"
+                height="400px"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-sm-4 px-0">
+            <div class="bags">
+              <img
+                src="./colr/pexels-michael-morse-5774953.jpg"
+                width="100%"
+                height="400px"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 px-0">
+            <div class="bags">
+              <img
+                src="./colr/pexels-pixabay-248077.jpg"
+                width="100%"
+                height="400px"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-sm-8 px-0">
+            <div class="bags">
+              <img
+                src="./colr/pexels-the-glorious-studio-5737277.jpg"
+                width="100%"
+                height="400px"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+  <footer>
+    <section id="footer" class="bg-danger mt-5">
+      <div class="foot1 my-2">
+        <h1>CUSTOMER SERVICE</h1>
+        <ul>
+          <li> <a href="#">HELP & CONTACT</a> </li>
+          <li><a href="#">DELIVERY INFORMATION</a> </li>
+          <li> <a href="#">INTERNATIONAL SHIPPING</a></li>
+          <li> <a href="#">RETURNS</a></li>
+          <li> <a href="#">PAYMENT OPTIONS</a></li>
+          <li> <a href="#">OFFER</a></li>
+        </ul>
+      </div>
+      <div class="foot1 my-2">
+        <h1>POLOCIES</h1>
+        <ul>
+          <li>TERMS AND CONDITONS</li>
+          <li>FEE</li>
+          <li>PAYMENT</li>
+        </ul>
+      </div>
+      <div class="foot1 my-2">
+       <h1>FOLLOW US </h1> 
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </section>
+    </footer>
 </html>
